--- a/r-inla.org/doc/hyper/likelihood/gev.tex
+++ b/r-inla.org/doc/hyper/likelihood/gev.tex
@@ -27,5 +27,6 @@
 	 \item[ survival ] FALSE 
 	 \item[ discrete ] FALSE 
 	 \item[ link ] default identity 
+	 \item[ status ] experimental 
 	 \item[ pdf ] gev 
 \end{description}
