Added info about the ordering of option "scale" for model iid, mec and meb.

--- a/r-inla.org/doc/latent/indep.tex
+++ b/r-inla.org/doc/latent/indep.tex
@@ -55,7 +55,10 @@ result=inla(formula,data=data,family="binomial",Ntrials=Ntrials)
 
 \subsection*{Notes}
 
-None.
+The option \verb|scale| defines the scaling in the same order as
+argument \verb|values|.  It is therefore adviced to also give argument
+\verb|values| when \verb|scale| is used to be sure that they are
+consistent.
 
 \end{document}
 
