Preparing for link-function-models, so added control.link() argument to control.family and prepared the rest of the code.

--- a/r-inla.org/doc/hyper/likelihood/binomial.tex
+++ b/r-inla.org/doc/hyper/likelihood/binomial.tex
@@ -2,6 +2,6 @@
 	\item[hyper]\ 
 	 \item[ survival ] FALSE 
 	 \item[ discrete ] TRUE 
-	 \item[ link ] default logit probit cloglog log h 
+	 \item[ link ] default logit probit cloglog log 
 	 \item[ pdf ] binomial 
 \end{description}
