Changed hard reference to some sty-files.

--- a/tutorials/spde/spde-tutorial.tex
+++ b/tutorials/spde/spde-tutorial.tex
@@ -20,25 +20,23 @@
 
 \usepackage{amsmath}
 
-\title{SPDE Manual}
+\title{The R-INLA tutorial: SPDE models}
 \author{Elias}
 
-\usepackage{/usr/share/R/share/texmf/tex/latex/upquote}
-\usepackage{/usr/share/R/share/texmf/tex/latex/Rd}
-\usepackage{/usr/share/R/share/texmf/tex/latex/Sweave}
+\usepackage{upquote}
+\usepackage{Rd}
+\usepackage{Sweave}
 \begin{document}
 \maketitle
 
 \begin{abstract}
-  In this tutorial we presents how we fit models 
-  to spatial point refered data, the called 
-  geostatistical model, using INLA and SPDE. 
-  Before a fast introduction on such models, 
-  we start with a toy example to show details. 
-  In forward examples we presents some funcionalities 
-  to fit more complex models, such as  non-Gaussian,  
-  models with two likelihoods, ... 
-\end{abstract} 
+    In this tutorial we presents how we fit models to spatial point
+    refered data, the called geostatistical model, using INLA and
+    SPDE.  Before a fast introduction on such models, we start with a
+    toy example to show details.  In forward examples we presents some
+    funcionalities to fit more complex models, such as non-Gaussian,
+    models with two likelihoods, ...
+\end{abstract}
 
 \tableofcontents
 
