Update spde tutorial files

--- a/tutorials/spde/spde-tutorial-introduction.tex
+++ b/tutorials/spde/spde-tutorial-introduction.tex
@@ -1,5 +1,5 @@
 
-\section{Introduction} 
+\chapter{Introduction} 
 
 If we have data measured on some locations, 
 by locations we mean some system of coordinate 
@@ -13,7 +13,7 @@ If we want do model that data incorporating
 the reference about where are each data from, 
 we want do use a model to point refereed data. 
 
-\subsection{The spatial dependence}
+\section{The spatial dependence}
 
 It is possible that we build a regression model 
 considering each coordinates as covariate. 
@@ -57,7 +57,7 @@ that study these models, the geostatistics.
 See \cite{cressie:1993} for a good introduction on 
 the spatial statistics. 
 
-\subsection{The Gaussian field}
+\section{The Gaussian field}
 
 To fix the notation, let $s$ any location on the study 
 area and $X(s)$ is the random effect at this location. 
@@ -223,7 +223,7 @@ GMRF models, we have cost of $O(n^{3/2})$
 on the computations with its precision matrix. 
 So, it is more easy to make analysis with big 'n'. 
  
-\subsection{The SPDE approach} 
+\section{The SPDE approach} 
 
 In the literature there is some ideas to 
 fit GF by an approximation of the GF to any GMRF. 
