--- a/tutorials/spde/spde-tutorial.tex
+++ b/tutorials/spde/spde-tutorial.tex
@@ -1,8 +1,15 @@
 \documentclass[a4paper,11pt]{report}
-\usepackage[scale={0.8,0.9},centering,includeheadfoot]{geometry}
+\usepackage[scale={0.6,0.9},centering,includeheadfoot]{geometry}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
+%%% warn: three lines depends on Sweave style files loc.
+\usepackage{/usr/share/R/share/texmf/tex/latex/upquote}
+\usepackage{/usr/share/R/share/texmf/tex/latex/Rd}
+\usepackage{/usr/share/R/share/texmf/tex/latex/Sweave}
+
+%%% line bellow must be after call Sweave.sty (changes font size to 10pt)
+%%\DefineVerbatimEnvironment{Soutput}{Verbatim}{fontsize=7pt}
 
 \newcommand{\bA}{\mbox{\protect \boldmath $A$}}
 \newcommand{\bF}{\mbox{\protect \boldmath $F$}}
@@ -18,25 +25,22 @@
 \newcommand{\bbv}{\mbox{\protect \boldmath $v$}}
 \newcommand{\bbx}{\mbox{\protect \boldmath $x$}}
 
-\usepackage{amsmath}
-
 \title{The R-INLA tutorial: SPDE models}
 \author{Elias}
 
-\usepackage{upquote}
-\usepackage{Rd}
-\usepackage{Sweave}
 \begin{document}
 \maketitle
 
 \begin{abstract}
-    In this tutorial we presents how we fit models to spatial point
-    refered data, the called geostatistical model, using INLA and
-    SPDE.  Before a fast introduction on such models, we start with a
-    toy example to show details.  In forward examples we presents some
-    funcionalities to fit more complex models, such as non-Gaussian,
-    models with two likelihoods, ...
-\end{abstract}
+  In this tutorial we presents how we fit models 
+  to spatial point refered data, the called 
+  geostatistical model, using INLA and SPDE. 
+  Before a fast introduction on such models, 
+  we start with a toy example to show details. 
+  In forward examples we presents some funcionalities 
+  to fit more complex models, such as  non-Gaussian,  
+  models with two likelihoods, ... 
+\end{abstract} 
 
 \tableofcontents
 
