--- a/tutorials/spde/spde-tutorial-likelihoodintro.Rnw
+++ b/tutorials/spde/spde-tutorial-likelihoodintro.Rnw
@@ -5,7 +5,7 @@ in \pkg{R}, the \pkg{geoR} package.
 But, before it, we show how we simulate 
 a dataset. 
 
-\subsection{Simulation of a data set} 
+\section{Simulation of a data set} 
 
 <<echo=F,results=hide>>=
 options(width=75)
@@ -88,7 +88,7 @@ legend('topright', format(q, dig=2), pch=1, pt.cex=q/10)
 \label{fig:grf1}
 \end{figure}
 
-\subsection{Maximum likelihood estimation}
+\section{Maximum likelihood estimation}
 
 In this section we get the maximum likelihood 
 estimation of the parameters of the model used to 
