--- a/tutorials/spde/spde-tutorial.tex
+++ b/tutorials/spde/spde-tutorial.tex
@@ -2,14 +2,7 @@
 \usepackage[scale={0.6,0.9},centering,includeheadfoot]{geometry}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage{amsmath}
-%%% warn: three lines depends on Sweave style files loc.
-\usepackage{/usr/share/R/share/texmf/tex/latex/upquote}
-\usepackage{/usr/share/R/share/texmf/tex/latex/Rd}
-\usepackage{/usr/share/R/share/texmf/tex/latex/Sweave}
-
-%%% line bellow must be after call Sweave.sty (changes font size to 10pt)
-%%\DefineVerbatimEnvironment{Soutput}{Verbatim}{fontsize=7pt}
+\usepackage{amsmath,upquote,Rd,Sweave}
 
 \newcommand{\bA}{\mbox{\protect \boldmath $A$}}
 \newcommand{\bF}{\mbox{\protect \boldmath $F$}}
