bit correction on Q_alpha,kappa^2

--- a/tutorials/spde/spde-tutorial-introduction.tex
+++ b/tutorials/spde/spde-tutorial-introduction.tex
@@ -321,7 +321,7 @@ as a function of $\kappa^2$ and $\alpha$:
 \begin{equation}\label{eq:Qalpha}\begin{array}{c}
 \bQ_{1,\kappa^2} = \bK_{\kappa^2}, \\
 \bQ_{2,\kappa^2} = \bK_{\kappa^2}\bC^{-1}\bK_{\kappa^2}, \\
-\bQ_{2,\kappa^2} = \bK_{\kappa^2}\bC^{-1}Q_{\alpha-2,\kappa^2}\bC^{-1}\bK_{\kappa^2}, 
+\bQ_{\alpha,\kappa^2} = \bK_{\kappa^2}\bC^{-1}Q_{\alpha-2,\kappa^2}\bC^{-1}\bK_{\kappa^2}, 
 \;\;\;\mbox{for} \;\;\alpha = 3,4,...\;.
 \end{array}\end{equation}
 Here we have too the notion that if $\nu$ increases, 
