Fixed a missprint in the doc for matern2d. Thanks to PB.

--- a/r-inla.org/doc/latent/matern2d.tex
+++ b/r-inla.org/doc/latent/matern2d.tex
@@ -22,7 +22,7 @@ a regular \verb|nrow x ncol| -lattice
 where $K_{\nu}$ is the modified Bessel function. The range is
 \emph{defined} as
 \begin{displaymath}
-    r = {\sqrt{8}}/{\kappa}
+    r = {\sqrt{8\nu}}/{\kappa}
 \end{displaymath}
 which about the distance where the covariance function becomes
 ``small''.
