--- a/r-inla.org/doc/hyper/latent/matern2d.tex
+++ b/r-inla.org/doc/hyper/latent/matern2d.tex
@@ -24,7 +24,7 @@
 	 	 	 \item[ from.theta ] \verb|function(x) exp(x)| 
 	 	 \end{description}
 	 \end{description}
-	 \item[ constr ] TRUE 
+	 \item[ constr ] FALSE 
 	 \item[ nrow.ncol ] TRUE 
 	 \item[ augmented ] FALSE 
 	 \item[ aug.factor ] 1 
