--- a/r-inla.org/doc/hyper/likelihood/poisson.tex
+++ b/r-inla.org/doc/hyper/likelihood/poisson.tex
@@ -2,6 +2,6 @@
 	\item[hyper]\ 
 	 \item[ survival ] FALSE 
 	 \item[ discrete ] TRUE 
-	 \item[ link ] default log test1 
+	 \item[ link ] default log test1 special1 
 	 \item[ pdf ] poisson 
 \end{description}
